# FIXED Clicked list is out of bounds