@@ -148,7 +148,7 @@ help:
 message:
   no-permission: '&cYou don''t have permission to do this. &8You need permission {permission}.'
   world-invalid: '&cThis is deactivated in this world. &7A administrator needs to add it to the config. World: {world}'
-  feature-disabled: '&cThis feature was disabled by an administrator. &7They need to enable setting {setting} in config, to let you use this feature.'
+  feature-disabled: '&cThis feature was disabled by an administrator. &8They need to enable setting {setting} in config, to let you use this feature.'
   current-war: '&cYou can''t do this right now. &7You land is currently engaged in a war. &7Please try again after the war is over.'
   noaccess:
     chunk: '&cYou''re not allowed to do this at this chunk &8(&7Land:&2 {land} &7X: {x} &7Z: {z}&8)&c. &8Bypass permission: {bypass}'
@@ -157,21 +157,24 @@ message:
     role-weight:
       land: '&cYou can''t edit this player in land&4 {land}&c. &7The role&6 {role} &7has a higher priority than yours.'
       area: '&cYou can''t edit this player in area&4 {area} &8(&7Land:&2 {land}&8)&c. &7The role&6 {role} &7has a higher priority than yours.'
-    lands: '&cYou can''t claim land here. &7This chunk belongs to a other management plugin. Name: {plugin}'
+    claim: '&cYou can''t claim land here. &7This chunk belongs to a other management plugin. Name: {plugin}'
     place: '&cYou''re not allowed to place blocks here. &7This chunk belongs to land&2 {land}&7.'
     break: '&cYou''re not allowed to break blocks here. &7This chunk belongs to land&2 {land}&7.'
+    ignite: '&cYou''re not allowed to ignite blocks here. &7This chunk belongs to land&2 {land}&7.'
+    enter: '&cYou''re not allowed to enter the area&4 {area} &cof land&4 {land}&c. &7You were teleported to your previous location.'
+    edit: '&cYou''re not allowed to edit this land. &7This chunk belongs to land&2 {land}&7.'
+
     interact:
       general: '&cYou''re not allowed to interact here. &7This chunk belongs to land&2 {land}&7.'
       door: '&cYou''re not allowed to open doors here. &7This chunk belongs to land&2 {land}&7.'
       mechanism: '&cYou''re not allowed to use mechanisms here. &7This chunk belongs to land&2 {land}&7.'
       container: '&cYou''re not allowed to open containers here. &7This chunk belongs to land&2 {land}&7.'
       villager: '&cYou''re not allowed to trade with villagers here. &7This chunk belongs to land&2 {land}&7.'
-    ignite: '&cYou''re not allowed to ignite blocks here. &7This chunk belongs to land&2 {land}&7.'
-    edit: '&cYou''re not allowed to edit this land. &7This chunk belongs to land&2 {land}&7.'
     combat:
       animal: '&cYou''re not allowed to attack animals here. &7This chunk belongs to land&§ {land}&7.'
       pvp: '&cYou''re not allowed to attack players here. &7This chunk belongs to land&§ {land}&7.'
       pvp-target: '&cYour target isn''t allowed to attack players here. &7You can''t fight with them here. &7This chunk belongs to land&3 {land}&7.'
+
   event:
     fly:
       warning: '&7You''re not allowed to fly here. Flight mode will be disabled in a few seconds. &8Bypass permission: {permission}'
@@ -235,7 +238,7 @@ command:
     lands-max: '&cYou can''t be part of any more lands. &7You reached your maximum of&3 {max} &7lands. &8Permission: lands.lands.NUMBER'
     name-numbers: '&cYou can''t use numbers in your lands name. &7Please use only latin letters.'
     name-accent: '&cYou can''t use accents in your lands name. &7Found non latin letters:&3 {non-latin} &7Please use only latin letters.'
-    name-length: '&cThis name is too long. &7Max length is&3 {max} &7characters. &7A administrator can change that in config.'
+    name-length: '&cThis name is too long. &7Max length is&3 {max} &7characters. &8A administrator can change that in config.'
     action-cooldown: '&cYou can''t do this now. &7You need to wait&5 {time}&7.'
     land-none: '&cYou''re not member of a land in this world. &7Use &8/&3Lands create &7to create one.'
     land-no-own: '&cYou don''t own a land in this world. &7Use &8/&3Lands create &7to create one.'
@@ -244,29 +247,29 @@ command:
     player-not-exist: '&cThere''s no player with the name&4 {player}&c. &7Typo?'
     player-not-online: '&cThere''s currently no player with the name&4 {player} &conline. &7Typo?'
     player-self: '&cYou can''t do that with yourself. &7You''re funny. :)'
-    banks-disabled: '&7Banks were disabled by a administrator. &7They can enable it in config.'
+    banks-disabled: '&7Banks were disabled by a administrator. &8They can enable it in config.'
     land-not-trusted: '&cPlayer&4 {player} &7isn''t part of this land &8(&7Land:&2 {land}&8)&7. You need to trust him first using &8/&3Lands trust&7.'
     land-max-members: '&cCouldn''t trust you in land&2 {land}&c. &7This land reached their maximum of&3 {members} &7members. &8The land needs more lands.members.NUMBER permission.'
-    chunk-not-trusted: '&cYou can''t do that here. &7You''re not trusted in this chunk &8(&7X: {x} Z: {z}&8)&7. It belongs to land&2 {land}&7.'
+    area-not-trusted: '&cYou can''t do that here. &7You''re not trusted in this chunk &8(&7X: {x} Z: {z}&8)&7. It belongs to the area&6 {area} &7of land&2 {land}&7.'
     invalid-number: '&cYour input&4 {input} &cisn''t a number. &7The&3 {argument} &7argument needs to be a number.'
   help:
     help: '&7Use &8/&aLand help &7for help.'
     cmd-not-exist: '&cThis command doesn''t exist. &7Command&3 {command} &7is invalid.'
     page-not-exist: '&cThe page&4 {page} &cdoesn''t exist. &7Typo?'
   create:
-    land-other: '&cYou''re not allowed to have your own land and be member of another land. &7You need to leave land&2 {land} &7first. A administrator can disable this in config.'
+    land-other: '&cYou''re not allowed to have your own land and be member of another land. &7You need to leave land&2 {land} &7first. &8A administrator can disable this in config.'
     max-own: '&cYou can''t create any more lands. &7You reached your maximum of&3 {max} &7own lands. &8Permission: lands.ownlands.NUMBER'
     success: '&7Successfully created land&2 {land} &7for&c ${cost}&7. You can claim chunks by executing &8/&3Lands claim&7. You can also use /Lands selection to claim a selection.'
-    broadcast: '&7Land&2 {land} &7was created by&e {player}&7.'
+    broadcast: '&7Land&2 {land} &7was created by&3 {player}&7.'
   rename:
-    success: '&7Successfully set the new name&e {name} &7for this land &8(&7Land:&2 {land}&8)&7. You paid&c ${cost}&7.'
+    success: '&7Successfully set the new name&3 {name} &7for this land &8(&7Land:&2 {land}&8)&7. You paid&c ${cost}&7.'
 
   edit:
     success: '&7You entered edit mode for this land &8(&7Land:&2 {land}&8)&7. Next actions, like &8/&3Lands claim &7or &8/&3Lands trust&7, will be executed for this land.'
   selection:
     not-complete: '&cYour selection is not complete. &7Please make sure that both positions are set &8(&bLEFT CLICK &7and &9RIGHT CLICK&8)&7. You can toggle the selection mode by executing &8/&3Lands selection&7.'
     max: '&cYour selection has too many chunks in it. &7Size:&3 {current} &7Your maximum size is&3 {max} chunks. &8Permission: lands.selection.NUMBER'
-    enableds: '&7You enabled selection mode. Use &5LEFT &7click on a block to set position one. With &5RIGHT &7click you set position two. After that you can apply the selection to these commands: &3Claim&7, &3Unclaim&7, &3Leave'
+    enableds: '&7You enabled selection mode. Use &5LEFT CLICK &7on a block to set position one. With &5RIGHT CLICK &7you set position two. After that you can apply the selection to these commands: &3Claim&7, &3Unclaim&7, &3Leave'
     disabled: '#t#&5&lSelection{newline}&c&lMode disabled'
     world: '&cBoth positions must be in the same world. &7Please set position one and position two in the same world.'
     pos:
@@ -278,28 +281,30 @@ command:
       assigned: '&7You successful assigned&3 {chunks} &7chunks to area&6 {area} &8(&7Land:&2 {land}&8)&7.'
 
   claim:
-    already: '&cYou can''t claim this chunk. &7It already belongs to land&a {land}&7.'
-    auto-create: '&7Trying to auto create a land for you, because you have none in this world. You can change the name of it by executing &8/&3Lands rename&7.'
-    auto-create-fail: '&cFailed to auto create a land for you. &7Please read the messages above and contact someone for help.'
-    near-other: '&cThis is too near to land&e {land}&c. &7You need to move further away from this land. Minimum chunk distance:&b {distance}&7.'
-    far-land: '&cYou can''t claim this chunk(s). &7Your claim needs to be connected to your land &8(&7Land:&e {land}&8)&7.'
-    success: '&7Successful claimed this chunk &8(&7Land:&e {land} &7X:&e {x} &7Z:&e {z}&8) &7for&b ${cost}&7. Next claim will cost&b ${next}&7.'
-    already-claimed: '&cIn your selection is a chunk that is already claimed and does not belong to your land &8(&7X:&e {x} &7Z:&e {z}&8)&c. &7It belongs to land&b {land}&7.'
-    max-chunk: '&cYou can''t claim&e {chunks} &cmore chunks for this land. &7The maximum for land&b {land} &7is&b {max} &7chunks. Permission: lands.chunks.NUMBER'
-    world: '&cYou can''t claim for this land in this world. &7Land&b {land} &7can only have claims in world&b {world}&7.'
-    selection: '&7You successfully claimed&b {chunks} &7chunks for this land &8(&7Land:&e {land}&8)&7. You paid&b ${cost}&7. Please note that only chunks which aren''t already claimed got claimed.'
+    already: '&cYou can''t claim this chunk. &7It already belongs to land&2 {land}&7.'
+    auto-create: '&7Trying to automatically create a land for you, because you have none in this world. You can change the name of it by executing &8/&3Lands rename&7.'
+    auto-create-fail: '&cFailed to auto create a land for you. &7Please read the messages above.'
+    near-other: '&cThis is too near to land&4 {land}&c. &7You need to move further away from this land. Minimum chunk distance is&3 {distance}&7. &8A administrator can change that in config.'
+    far-land: '&cYou can''t claim this chunk(s). &7Your claims need to be connected to your land &8(&7Land:&2 {land}&8)&7.'
+    success: '&7Successful claimed this chunk &8(&7Land:&2 {land} &7X: {x} Z: {z}&8) &7for&c ${cost}&7. Next claim will cost&b ${next}&7.'
+    already-claimed: '&cIn your selection is a chunk that is already claimed and does not belong to your land &8(&7X: {x} Z: {z}&8)&c. &7It belongs to land&2 {land}&7.'
+    max-chunk: '&cYou can''t claim&4 {chunks} &cmore chunks for this land. &7The maximum for land&2 {land} &7is&3 {max} &7chunks. &8Permission: lands.chunks.NUMBER'
+    world: '&cYou can''t claim for this land in this world. &7Land&2 {land} &7can only have claims in world&3 {world}&7.'
+    selection: '&7You successfully claimed&3 {chunks} &7chunks for this land &8(&7Land:&2 {land}&8)&7. You paid&c ${cost}&7.'
   leave:
-    land-owner: '&cYou can''t leave this land. &7As the owner of the land you need to delete it. Use &8/&3Lands delete&7.'
-    land-success: '&7Successfully left land&b {land}&7. You don''t have access to this land anymore.'
-    chunk-success: '&7Successfully left this chunk. You don''t have access to this chunk anymore.'
+    land-owner: '&cYou can''t leave this land. &7As the owner of this land you need to delete it. Use &8/&3Lands delete&7.'
     selection: '&7You successfully left&b {chunks} &7from your selection. The chunks, in which you were the owner, got deleted.'
+    land:
+      success: '&7Successfully left land&2 {land}&7. You don''t have access to this land anymore.'
+    chunk:
+      success: '&7Successfully left this chunk. You don''t have access to this chunk anymore.'
   unclaim:
-    success: '&7Successfully unclaimed this chunk &8(&7X:&e {x} &7Z:&e {z}&8)&7. You got&b ${back} &7back.'
+    success: '&7Successfully unclaimed this chunk &8(&7Land:&2 {land} &7X: {x} Z: {z}&8)&7. You got&a ${back} &7back.'
     selection: '&7You successfully unclaimed this selection. Please note that only chunks got unclaimed in which you were the owner.'
   delete:
-    confirm: '&cYou need to confirm this action. &7Use &8/&aLand delete {land} confirm&7.'
-    success: '&7Successfully deleted this land &8(&7Land:&e {land}&8)&7.'
-    broadcast: '&7The land&b {land} &7was deleted by&b {player}&7.'
+    confirm: '&cYou need to confirm this action. &7Use &8/&3Land delete {land} confirm&7.'
+    success: '&7Successfully deleted this land &8(&7Land:&2 {land}&8)&7.'
+    broadcast: '&7The land&2 {land} &7was deleted by&3 {player}&7.'
 
   trust:
     own-land: '&cThis player isn''t allowed to have their own land and be part of another land. &7They need to leave it first.'
@@ -345,26 +350,25 @@ command:
       success: '&7Successfully accepted invite from land&2 {land} &7for the area&6 {area}&7.'
       broadcast: '&2{land} &8| &7Player&3 {player} &7is now member of area&6 {area} &7in our land&2 {land}&7.'
   deny:
-    not-exist: '&cYou don''t have an invite from land&4 {land} &cor it expired. &7Please check your input.'
-    success: '&7You successfully denied the invite from land&3 {land}&7.'
+    not-exist: '&cYou don''t have a invite from land&4 {land} &cor it expired. &7Typo?'
+    success: '&7You successfully denied the invite from land&2 {land}&7.'
 
   teleport:
-    world-not-exist: '&cThe world with the name&e {world} &cdoes''t exist.'
-    chunk-not-claimed: '&cThis chunk is not claimed &8(&7X:&e {x} &7Z:&e {z}&8)&c. &7Bypass permission:&b lands.bypass.wilderness.teleport'
+    world-not-exist: '&cThe world with the name&4 {world} &cdoes''t exist. &7Typo?'
+    chunk-not-claimed: '&cThis chunk isnt''t claimed &8(&7X: {x} &7Z: {z}&8)&c. &8Bypass permission: lands.bypass.wilderness.teleport'
     success: '#t#&9&lTeleported{newline}&7X: {x} Z: {z} Claimed: {claimed}'
 
   setspawn:
-    force-land: '&cYou can only set the land spawn on your land. &7Go to your land&b {land} &7first.'
+    force-land: '&cYou can only set the land spawn on your land. &7Go to your land&2 {land} &7first. &8A administrator can change that in config.'
     successs: '#t#&a&lSpawn set{newline}&7&lCost:&b&l ${cost}'
   spawn:
-    not-exist: '&cThere''s no spawn set for land&e {land}&c. &7Someone  needs to set it first by executing &8/&aLand setSpawn&7.'
-    not-allowed: '&cYou''re not allowed to teleport to the spawn of this land. &7The owner needs to give you permission to do so. Contact him for assistance &8(&7Land:&e {land}&8)&7.'
-    successs: '#t#&9&lTeleported{newline}&7&lLand&a {land} &7&lCost:&a ${cost}'
+    not-exist: '&cThere''s no spawn set for land&4 {land}&c. &7Someone needs to set it first by executing &8/&3Land setspawn&7.'
+    not-allowed: '&cYou''re not allowed to teleport to the spawn of this land. &7They need to give you permission to do so &8(&7Land:&2 {land}&8)&7.'
+    successs: '#t#&9&lTeleported{newline}&7&lLand&2 {land} &7&lCost:&c ${cost}'
 
   wild:
-    no-location: '&cCouldn''t find a safe location for you that matches the filter in config. &7You can try to set the maximum x and z radius for random teleportation to 0 in config. Also you can set the min-distance option lower.'
-    success: '&7You were random teleported &8(&7X:&e {x} &7Z:&e {z}&8)&7. You paid&b ${cost}&7.'
-    searching: '#t#&9&lSearching{newline}&7&lRandom Location'
+    no-location: '&cCouldn''t find a safe location for you that matches the filter in config. &8You can try to set the maximum x and z radius for random teleportation to 0 in config. Also you can set the min-distance option lower and the max radius higher.'
+    success: '&7You were random teleported &8(&7X: {x} Z: {z}&8)&7. You paid&c ${cost}&7.'
 
   deposit:
     number: '&7You need to specify an amount of money. Use &8/&aLand deposit &8<&aAmount&8> &7or &8/&aLand deposit &8<&aLand&8> <&aAmount&8>&7.'
